--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ main::before{
 }
 
 main, header{
-  padding: 0 var(--sp-8);
+  padding: 0 var(--sp-16);
   
 }
 
@@ -99,7 +99,7 @@ div.background-columns{
   flex-direction: column;
   flex-wrap: wrap;
   z-index: -1;
-  padding: 0 var(--sp-8);
+  padding: 0 var(--sp-16);
   gap: var(--sp-8);
   pointer-events: none;
 }
